# egl

./: .cvsignore  .gitignore  CMakeLists.txt  README.md  Readme.txt  egl.dsp  egl.dsw  egl.ncb  egl.sln  egl.vcproj  eglded.vcproj  makefile  todo.txt
CVS/: Entries  Entries.Extra
binaries/CVS/: Entries  Repository
cgame/: cg_api.c  cg_api.h  cg_decals.c  cg_draw.c  cg_effects.h  cg_entities.c  cg_entities.h  cg_hud.c  cg_inventory.c  cg_keys.c  cg_keys.h  cg_light.c  cg_loadscreen.c  cg_local.h  cg_localents.c  cg_location.c  cg_main.c  cg_mapeffects.c  cg_media.c  cg_media.h  cg_muzzleflash.c  cg_parse.c  cg_parteffects.c  cg_partgloom.c  cg_particles.c  cg_partsustain.c  cg_partthink.c  cg_parttrail.c  cg_players.c  cg_predict.c  cg_screen.c  cg_shared.h  cg_tempents.c  cg_view.c  cg_weapon.c  cgame.dsp  cgame.ncb  cgame.opt  cgame.plg  cgame.vcproj  (+3 more)
cgame/CVS/: Entries  Entries.Extra  Repository
cgame/menu/: m_local.h  m_main.c  m_mp.c  m_mp_downloading.c  m_mp_join.c  m_mp_join_addrbook.c  m_mp_player.c  m_mp_start.c  m_mp_start_dmflags.c  m_opts.c  m_opts_controls.c  m_opts_effects.c  m_opts_gloom.c  m_opts_hud.c  m_opts_input.c  m_opts_misc.c  m_opts_screen.c  m_opts_sound.c  m_quit.c  m_sp.c  m_sp_credits.c  m_sp_loadgame.c  m_sp_savegame.c  m_vid.c  m_vid_exts.c  m_vid_settings.c  menu.c
cgame/ui/: ui_backend.c  ui_cursor.c  ui_draw.c  ui_items.c  ui_keys.c  ui_local.h
client/: cl_acapi.c  cl_cents.c  cl_cgapi.c  cl_cin.c  cl_console.c  cl_demo.c  cl_dlight.c  cl_download.c  cl_ents.c  cl_hud.c  cl_input.c  cl_keys.c  cl_keys.h  cl_loc.c  cl_local.h  cl_main.c  cl_parse.c  cl_prediction.c  cl_screen.c  cl_tent.c  cl_uiapi.c  cl_view.c  console.c  gui_cursor.c  gui_events.c  gui_init.c  gui_keys.c  gui_local.h  gui_main.c  gui_public.h  keys.c  keys.h  snd_dma.c  snd_local.h  snd_main.c  snd_openal.c
client/CVS/: Entries  Entries.Extra  Repository
client/dfx/: dfx_backend.c  dfx_think.c
client/dfx/CVS/: Entries  Entries.Extra  Repository
client/pfx/: pfx_backend.c  pfx_effects.c  pfx_gloom.c  pfx_misc.c  pfx_sustain.c  pfx_think.c  pfx_trail.c
client/pfx/CVS/: Entries  Entries.Extra  Repository
common/: alias.c  cbuf.c  cm_common.c  cm_common.h  cm_public.h  cm_q2_local.h  cm_q2_main.c  cm_q2_trace.c  cm_q3_local.h  cm_q3_main.c  cm_q3_patch.c  cm_q3_trace.c  cmd.c  cmd.h  cmodel.c  common.c  common.h  crc.c  cvar.c  files.c  files.h  font.h  md4.c  md5.c  mem.c  memory.c  memory.h  msg.c  net_chan.c  net_msg.c  parse.c  pmove.c  protocol.h
common/CVS/: Entries  Entries.Extra  Repository
common/include/: zconf.h
common/include/CVS/: Entries  Entries.Extra  Repository
game/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.dsp  game.h  game.plg  game.vcproj  m_actor.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flash.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  (+12 more)
game/CVS/: Entries  Entries.Extra  Repository
linux/: cd_linux.c  con_linux.c  glimp_linux.c  glimp_linux.h  in_x11.c  mem_linux.c  net_linux.c  net_udp.c  qgl_linux.c  snd_linux.c  sys_linux.c  vid_linux.c  x11.h  x11_linux.h  x11_main.c  x11_utils.c
linux/CVS/: Entries  Entries.Extra  Repository  Root
release/: BuildLog.htm  alimp_win.sbr  qal_win.sbr  r_fx.sbr  snd_openal.sbr
renderer/: qgl.h  r_alias.c  r_backend.c  r_backend.h  r_cin.c  r_cull.c  r_draw.c  r_entity.c  r_entity.h  r_fx.c  r_glext.h  r_glstate.c  r_glstate.h  r_image.c  r_image.h  r_init.c  r_light.c  r_lightq3.c  r_local.h  r_main.c  r_math.c  r_meshbuffer.c  r_model.c  r_model.h  r_poly.c  r_program.c  r_program.h  r_public.h  r_shader.c  r_shader.h  r_shadow.c  r_skeletal.c  r_sky.c  r_sprite.c  r_surface.c  r_typedefs.h  r_vbo.c  r_vbo.h  r_world.c  r_worldq3.c  (+35 more)
renderer/CVS/: Entries  Entries.Extra  Repository
renderer/jpg/CVS/: Entries  Entries.Extra  Repository
renderer/png/: zconf.h
renderer/png/CVS/: Entries  Entries.Extra  (+1 more)
server/: sv_ccmds.c  sv_ents.c  sv_game.c  sv_gameapi.c  sv_init.c  sv_local.h  sv_main.c  sv_pmove.c  sv_send.c  sv_user.c  sv_world.c
server/CVS/: Entries  Entries.Extra  Repository
shared/: endian.c  infostrings.c  m_angles.c  m_bounds.c  m_mat3.c  m_plane.c  m_quat.c  mathlib.c  shared.c  shared.h  string.c
shared/CVS/: Entries  Entries.Extra  Repository
sound/: cdaudio.h  qal.h  snd_dma.c  snd_loc.h  snd_mem.c  snd_mix.c  snd_openal.c  snd_pub.h
sound/CVS/: Entries  Entries.Extra  Repository
ui/: exports.def  keycodes.h  ui.dsp  ui.plg  ui.vcproj  ui_addrbook.c  ui_api.c  ui_api.h  ui_backend.c  ui_common.c  ui_common.h  ui_controls.c  ui_credits.c  ui_cursor.c  ui_dlopts.c  ui_dmflags.c  ui_draw.c  ui_effects.c  ui_fog.c  ui_game.c  ui_glexts.c  ui_gloom.c  ui_hud.c  ui_input.c  ui_joinserver.c  ui_keys.c  ui_loadgame.c  ui_loadscreen.c  ui_local.h  ui_mainmenu.c  ui_misc.c  ui_multiplayer.c  ui_options.c  ui_playercfg.c  ui_quit.c  ui_savegame.c  ui_screen.c  ui_sound.c  ui_startserver.c  ui_video.c  (+1 more)
ui/CVS/: Entries  Entries.Extra  Repository
unix/: sdl_glimp.c  sdl_snd.c  unix_glimp.c  unix_glimp.h  unix_main.c  unix_snd_alsa.c  unix_snd_cd.c  unix_snd_main.c  unix_snd_oss.c  unix_snd_sdl.c  unix_udp.c  x11_main.c  x11_utils.c
win32/: EGL.APS  EGL.rc  alimp_win.c  alimp_win.h  cd_win.c  con_win.c  conproc.c  glimp_win.c  glimp_win.h  in_win.c  key_win.c  mem_win.c  net_wins.c  qal_win.c  qgl_win.c  resource.h  snd_win.c  sys_win.c  vid_win.c  win_console.c  win_glimp.c  win_glimp.h  win_local.h  win_main.c  win_snd_cd.c  win_sock.c  win_vid.c  winquake.h
win32/CVS/: Entries  Entries.Extra  Repository
win32/lib/: ALut.lib  ALutd.lib  ALutr.lib  OpenAL32.exp  OpenAL32.lib  OpenAL32d.exp  OpenAL32d.lib  OpenAL32r.lib  libpngd.lib  libpngr.lib  vc60.idb  vc6libpngd.lib  vc6libpngr.lib  vc6zlibd.lib  vc6zlibr.lib  zlibd.lib  zlibd_old.lib  zlibr.lib  zlibr_old.lib
win32/vs17/: egl.sln
(+13 files in other folders)
